--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>Moeyy Weather</title>
+  <title>-MLJ- Weather</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but Moeyy Weather doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but -MLJ- Weather doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
